--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ Thumbs.db
 
 # 其他
 frontend/public/
+health_monitoring.db
+
+# PlatformIO
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
