feat: idf 版 websocket legacy-server

--- a/firmware-esp-cam/platformio.ini
+++ b/firmware-esp-cam/platformio.ini
@@ -10,13 +10,36 @@
 
 [env:esp32cam]
 platform = espressif32
-prject_dir = firm
-board = esp32cam
+board = esp32-s3-devkitc-1
 framework = arduino
+; 基础性能配置
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = dio
+
+; ; PSRAM 配置
+; board_build.arduino.memory_type = qio_opi
+
+; ; 编译标志
+; build_flags = 
+;     -DBOARD_HAS_PSRAM
+;     -DCONFIG_SPIRAM=1
+;     -DCONFIG_BSP_LCD_RGB_BUFFER_NUMS=2
+;     -DCONFIG_BSP_LCD_RGB_BOUNCE_BUFFER_MODE=1
+;     -DCONFIG_USB_HOST_ENABLE=1
+;     -DCONFIG_ESP32S3_DATA_CACHE_LINE_32B=1
+;     -DCONFIG_SPIRAM_SPEED_80M=1
+;     -DCONFIG_ESPTOOLPY_FLASHFREQ_80M=1
+;     -DCORE_DEBUG_LEVEL=4
+;     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=8192
+;     -DCONFIG_FREERTOS_THREAD_LOCAL_STORAGE_POINTERS=2
+
 monitor_speed = 115200
-monitor_dtr = 0
-monitor_rts = 0
+; monitor_dtr = 0
+; monitor_rts = 0
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
 	ESP32Async/AsyncTCP
 	ESP32Async/ESPAsyncWebServer
+	esp-arduino-libs/ESP32_USB_STREAM@^0.1.0
