fix: espressif32@5.3.0 在 lcd ev board 上的支持

--- a/firmware-esp-cam/platformio.ini
+++ b/firmware-esp-cam/platformio.ini
@@ -9,14 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32cam]
-platform = espressif32
-board = esp32cam
+platform = espressif32@5.3.0
+board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
-	ESP32Async/AsyncTCP
-	ESP32Async/ESPAsyncWebServer
-
+	; ESP32Async/AsyncTCP
+	; ESP32Async/ESPAsyncWebServer
+	esp-arduino-libs/ESP32_USB_STREAM@^0.1.0
