--- a/firmware-esp-cam/platformio.ini
+++ b/firmware-esp-cam/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
 	; ESP32Async/AsyncTCP
