feat: lcd-ev 实现 wsclient

--- a/firmware-esp-cam/platformio.ini
+++ b/firmware-esp-cam/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	ESP32Async/AsyncTCP
 	ESP32Async/ESPAsyncWebServer
 	links2004/WebSockets@^2.6.1
+monitor_filters = esp32_exception_decoder
