--- a/firmware-esp-lcd-ev/platformio.ini
+++ b/firmware-esp-lcd-ev/platformio.ini
@@ -22,3 +22,5 @@ lib_deps =
 	; ESP32Async/AsyncTCP
 	; ESP32Async/ESPAsyncWebServer
 	esp-arduino-libs/ESP32_USB_STREAM@^0.1.0
+	links2004/WebSockets@^2.6.1
+monitor_filters = esp32_exception_decoder
