feat: lcd-ev 实现 WS2812 的 LED

--- a/firmware-esp-lcd-ev/platformio.ini
+++ b/firmware-esp-lcd-ev/platformio.ini
@@ -19,8 +19,7 @@ build_flags =
 	-DCORE_DEBUG_LEVEL=5
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
-	; ESP32Async/AsyncTCP
-	; ESP32Async/ESPAsyncWebServer
 	esp-arduino-libs/ESP32_USB_STREAM@^0.1.0
 	links2004/WebSockets@^2.6.1
+	adafruit/Adafruit NeoPixel@^1.15.1
 monitor_filters = esp32_exception_decoder
