--- a/firmware-esp-lcd-ev/platformio.ini
+++ b/firmware-esp-lcd-ev/platformio.ini
@@ -8,18 +8,50 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32cam]
-platform = espressif32@5.3.0
-board = esp32-s3-devkitc-1
+[env:BOARD_ESPRESSIF_ESP32_S3_LCD_EV_BOARD_V1_5]
+; The `espressif32` latest official version does not support Arduino v3.1.x, temporarily using a third-party version
+; platform = espressif32@5.3.0
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
+platform_packages =
+    platformio/framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#3.1.1
+; Use high performance libraries to improve the performance, and avoid esp32s3 RGB LCD screen drifting issue
+    platformio/framework-arduinoespressif32-libs@https://dl.espressif.com/AE/esp-arduino-libs/esp32-3.1.1-h.zip
+build_flags =
+    -std=c++17
+    -DCORE_DEBUG_LEVEL=5
+
+	; LVGL 相关
+    -DLV_COLOR_16_SWAP=0
+	-DLV_CONF_INCLUDE_SIMPLE
+    -DLV_LVGL_H_INCLUDE_SIMPLE
+
+    -DESP_PANEL_BOARD_DEFAULT_USE_SUPPORTED=1
+    -DBOARD_ESPRESSIF_ESP32_S3_LCD_EV_BOARD_V1_5
+
+    ; RGB LCD 帧缓冲区配置
+    -DESP_LCD_RGB_DOUBLE_FB=0
+    -DESP_LCD_RGB_BOUNCE_BUFFER_SIZE=32768
+
+    -I src
+
+board = BOARD_ESPRESSIF_ESP32_S3_LCD_EV_BOARD_V1_5
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
+debug_tool = esp-builtin
 monitor_dtr = 0
 monitor_rts = 0
-build_flags = 
-	-DCORE_DEBUG_LEVEL=5
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
 	esp-arduino-libs/ESP32_USB_STREAM@^0.1.0
 	links2004/WebSockets@^2.6.1
+
+	; WS2812
 	adafruit/Adafruit NeoPixel@^1.15.1
-monitor_filters = esp32_exception_decoder
+
+	; 屏幕相关
+    https://github.com/esp-arduino-libs/ESP32_Display_Panel.git
+    https://github.com/esp-arduino-libs/ESP32_IO_Expander.git#v1.1.0
+    https://github.com/esp-arduino-libs/esp-lib-utils.git#v0.2.0
+    https://github.com/lvgl/lvgl.git#v8.4.0
