--- a/firmware-esp-lcd-ev/platformio.ini
+++ b/firmware-esp-lcd-ev/platformio.ini
@@ -23,6 +23,7 @@ build_flags =
 	; LVGL 相关
     -DLV_COLOR_16_SWAP=0
 	-DLV_CONF_INCLUDE_SIMPLE
+    -D LV_CONF_PATH="${PROJECT_DIR}/include/lv_conf.h"
     -DLV_LVGL_H_INCLUDE_SIMPLE
 
     -DESP_PANEL_BOARD_DEFAULT_USE_SUPPORTED=1
