--- a/firmware-esp-cam/platformio.ini
+++ b/firmware-esp-cam/platformio.ini
@@ -17,7 +17,7 @@ monitor_dtr = 0
 monitor_rts = 0
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
-	ESP32Async/AsyncTCP
-	ESP32Async/ESPAsyncWebServer
+	; ESP32Async/AsyncTCP
+	; ESP32Async/ESPAsyncWebServer
 	links2004/WebSockets@^2.6.1
 monitor_filters = esp32_exception_decoder
