--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@tresjs/cientos": "^4.3.1",
+    "@tresjs/core": "^4.3.6",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "three": "^0.177.0",
     "vue": "^3.3.9",
     "vue-router": "^4.2.5"
   },
@@ -26,4 +29,4 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.0"
   }
-} 
+}
