fix: inference 推理

--- a/env.example
+++ b/env.example
@@ -1,13 +1,16 @@
 # 服务器配置
 HOST=0.0.0.0
-PORT=8000
-RELOAD=True
+PORT=8000 # 通过 vite.cconfig.js 转发到前端 /api/ 路径
+RELOAD=False
 
+# == 已弃用 ==
 # 视频配置
 # 视频代理服务器地址和端口
 VIDEO_PROXY_HOST=0.0.0.0
 VIDEO_PROXY_PORT=8081
 
+# == 已弃用 ==
+# 新方法：在 backend/api/monitor.py 中注册多个摄像头监视终端
 # 视频源
 # 直接连接到摄像头：通过索引，例如 0 表示第一个摄像头
 # VIDEO_URL=0
@@ -15,3 +18,17 @@ VIDEO_PROXY_PORT=8081
 # VIDEO_URL=http://192.168.1.100:81/stream
 # 连接到视频代理服务器（推荐）
 VIDEO_URL=http://0.0.0.0:8081/mjpeg
+
+# 生成器配置
+OPENAI_API_KEY=sk-XXXX
+OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+OPENAI_MODEL=deepseek-r1-distill-llama-8b
+
+ROBOFLOW_API_KEY=XXXX
+INFERENCE_SUPPRESS_DEPRECATION_WARNINGS=1
+CORE_MODEL_SAM_ENABLED=False # inference 无杂项依赖不 warn
+CORE_MODEL_SAM2_ENABLED=False
+CORE_MODEL_CLIP_ENABLED=False
+CORE_MODEL_GAZE_ENABLED=False
+CORE_MODEL_GROUNDINGDINO_ENABLED=False
+CORE_MODEL_YOLO_WORLD_ENABLED=False
